# stl2vf

./: .gitignore  Cargo.toml  LICENSE.md  README.md  output.geo  output.msh  viewer.py
src/: lib.rs  main.rs
